// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Package transformer should let existing lin & test scripts 1`] = `
{
  "author": {
    "email": "nicolas.froidure@insertafter.com",
    "name": "Nicolas Froidure",
    "url": "https://insertafter.com/en/index.html",
  },
  "contributors": [],
  "engines": {
    "node": ">=16.15.0",
  },
  "files": [
    "src",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
  ],
  "license": "MIT",
  "metapak": {
    "data": {
      "childPackage": true,
    },
  },
  "scripts": {
    "cli": "env NODE_ENV=\${NODE_ENV:-cli}",
    "lint": "echo "Linting is fearing"",
    "test": "echo "Testing is doubting"",
  },
  "version": "0.0.0",
}
`;

exports[`Package transformer should work with a child package.json 1`] = `
{
  "author": {
    "email": "nicolas.froidure@insertafter.com",
    "name": "Nicolas Froidure",
    "url": "https://insertafter.com/en/index.html",
  },
  "contributors": [],
  "engines": {
    "node": ">=16.15.0",
  },
  "files": [
    "src",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
  ],
  "license": "MIT",
  "metapak": {
    "data": {
      "childPackage": true,
    },
  },
  "scripts": {
    "cli": "env NODE_ENV=\${NODE_ENV:-cli}",
    "lint": "echo "WARNING: No linter specified"",
    "test": "echo "WARNING: No tests specified"",
  },
  "version": "0.0.0",
}
`;

exports[`Package transformer should work with a root package 1`] = `
{
  "author": {
    "email": "nicolas.froidure@insertafter.com",
    "name": "Nicolas Froidure",
    "url": "https://insertafter.com/en/index.html",
  },
  "config": {
    "commitizen": {
      "path": "./node_modules/cz-conventional-changelog",
    },
  },
  "contributors": [],
  "devDependencies": {
    "commitizen": "^4.2.5",
    "conventional-changelog-cli": "^2.2.2",
    "cz-conventional-changelog": "^3.3.0",
  },
  "engines": {
    "node": ">=16.15.0",
  },
  "files": [
    "src",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
  ],
  "greenkeeper": {
    "ignore": [
      "commitizen",
      "cz-conventional-changelog",
      "conventional-changelog-cli",
    ],
  },
  "license": "MIT",
  "metapak": {
    "data": {
      "rootPackage": true,
    },
  },
  "scripts": {
    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -k packages/undefined/package.json && git add CHANGELOG.md",
    "cli": "env NODE_ENV=\${NODE_ENV:-cli}",
    "cz": "env NODE_ENV=\${NODE_ENV:-cli} git cz",
    "lint": "lerna run lint",
    "precz": "npm t && npm run lint && npm run metapak -- -s && npm run lerna -- run --parallel metapak -- -- -s",
    "preversion": "npm t && npm run lint && npm run metapak -- -s && npm run lerna -- run --parallel metapak -- -- -s",
    "test": "lerna run test",
    "version": "npm run changelog",
  },
}
`;

exports[`Package transformer should work with an empty package.json 1`] = `
{
  "author": {
    "email": "nicolas.froidure@insertafter.com",
    "name": "Nicolas Froidure",
    "url": "https://insertafter.com/en/index.html",
  },
  "config": {
    "commitizen": {
      "path": "./node_modules/cz-conventional-changelog",
    },
  },
  "contributors": [],
  "devDependencies": {
    "commitizen": "^4.2.5",
    "conventional-changelog-cli": "^2.2.2",
    "cz-conventional-changelog": "^3.3.0",
  },
  "engines": {
    "node": ">=16.15.0",
  },
  "files": [
    "src",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
  ],
  "greenkeeper": {
    "ignore": [
      "commitizen",
      "cz-conventional-changelog",
      "conventional-changelog-cli",
    ],
  },
  "license": "MIT",
  "scripts": {
    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md",
    "cli": "env NODE_ENV=\${NODE_ENV:-cli}",
    "cz": "env NODE_ENV=\${NODE_ENV:-cli} git cz",
    "lint": "echo "WARNING: No linter specified"",
    "precz": "npm t && npm run lint && npm run metapak -- -s",
    "preversion": "npm t && npm run lint && npm run metapak -- -s",
    "test": "echo "WARNING: No tests specified"",
    "version": "npm run changelog",
  },
  "version": "0.0.0",
}
`;
